# apexive

./: .env-sample  .gitignore  Dockerfile  dockerc-compose.yaml  pyproject.toml  requirements.txt
apexive_project/: manage.py
apexive_project/0_data/: export-logbook_template.csv
apexive_project/apexive_project/: asgi.py  settings.py  urls.py  wsgi.py
apexive_project/exporter/: start.py
apexive_project/exporter/dto/: conf.py
apexive_project/exporter/helper/: __init__.py  helper.py
apexive_project/exporter/service/: export.py
apexive_project/importer/: start.py
apexive_project/importer/dto/: conf.py
apexive_project/importer/helper/: __init__.py  helper.py
apexive_project/importer/service/: insert.py
apexive_project/pilotlog_app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apexive_project/pilotlog_app/migrations/: 0001_initial.py  0002_pilotdata_delete_aircraft_delete_flight.py  0003_airfield_flight_imagepic_limitrules_myquery_and_more.py  0004_remove_aircraft_table_remove_airfield_table_and_more.py
nginx/: default.conf
